# spooky_party

./: .gitignore  pyproject.toml
spooky_numbers/: db.py  diffuser.py  numbers.py  schema.sql  server.py
spooky_numbers/templates/: admin.html  numbers.html  printer_redirect.html  register.html
spooky_printer/: spooky_printer.ino
